Fix media query and overflow

--- a/assets/css/apps/note/cmps/NotePreviewButtons.css
+++ b/assets/css/apps/note/cmps/NotePreviewButtons.css
@@ -1,6 +1,7 @@
 .preview-btns {
     display: flex;
     opacity: 0;
+    max-width: 100%;
 }
 
 .note-preview:hover .preview-btns {
